--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,9 @@
 
 @font-face {
 font-family: "CustomFont";
-src: url("C:/Users/DELL/Desktop/Condo-hunter/assets/MYRIADPRO-REGULAR.otf");
-src: url("C:/Users/DELL/Desktop/Condo-hunter/assets/Angie Bold.ttf");
-src: url("C:/Users/DELL/Desktop/Condo-hunter/assets/Angie-Regular.otf");
+src: url("MYRIADPRO-REGULAR.otf");
+src: url("Angie Bold.ttf");
+src: url("Angie-Regular.otf");
 
 
 }
@@ -100,7 +100,7 @@ src: url("C:/Users/DELL/Desktop/Condo-hunter/assets/Angie-Regular.otf");
 .banner-section{
 	width: 100%;
 	height: 780px;
-	background-image: url(C:/Users/DELL/Desktop/Condo-hunter/assets/images/bg.png);
+	background-image: url(images/bg.png);
 		
 	background-size: cover;
 }
@@ -323,7 +323,7 @@ src: url("C:/Users/DELL/Desktop/Condo-hunter/assets/Angie-Regular.otf");
 /*feature end*/
 
 .content{
-  background: url(C:/Users/DELL/Desktop/Condo-hunter/assets/images/content.bg.png);
+  background: url(content.bg.png);
   background-size: cover;
   background-repeat: no-repeat;
   height: 1200px;
@@ -453,7 +453,7 @@ h2{
 
 /*Footer Start*/
  .footer{
-  background: url(C:/Users/DELL/Desktop/Condo-hunter/assets/images/footer-bg.png);
+  background: url(footer-bg.png);
   background-size: cover;
   background-repeat: no-repeat;
   height: 730px;
