--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ src: url("Angie-Regular.otf");
 .banner-section{
 	width: 100%;
 	height: 780px;
-	background-image: url(images/bg.png);
+	background-image: url("images/bg.png");
 		
 	background-size: cover;
 }
