--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ src: url("Angie-Regular.otf");
 .banner-section{
 	width: 100%;
 	height: 780px;
-	background-image: url("images\bg.png");
+	background-image: url(/images/bg.png);
 		
 	background-size: cover;
 }
@@ -323,7 +323,7 @@ src: url("Angie-Regular.otf");
 /*feature end*/
 
 .content{
-  background: url(content.bg.png);
+  background: url(/image/content.bg.png);
   background-size: cover;
   background-repeat: no-repeat;
   height: 1200px;
@@ -453,7 +453,7 @@ h2{
 
 /*Footer Start*/
  .footer{
-  background: url(footer-bg.png);
+  background: url(/images/footer-bg.png);
   background-size: cover;
   background-repeat: no-repeat;
   height: 730px;
