--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ src: url("Angie-Regular.otf");
 
 .banner-section{
 	width: 100%;
-    height: auto;
+	height: 780px;
 	background-image: url('../images/bg.png');
 		
 	background-size: cover;
