--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,8 @@ src: url("Angie-Regular.otf");
   
 /*Navbar End*/
 
+/*Banner Start*/
+
 .banner-section{
 	width: 100%;
 	height: 780px;
@@ -135,15 +137,11 @@ src: url("Angie-Regular.otf");
 }
 
 
-/*.banner-section-2{
-	justify-content: flex-end;
-}*/
-
 
 
 .banner-rectangle img{
   position: absolute;
-  left: 703px;  
+  left: 0;  
   
 }
 
