--- a/css/style.css
+++ b/css/style.css
@@ -185,9 +185,9 @@ src: url("Angie-Regular.otf");
 
 /*Start Feature Section*/
 
-#feature-section{
+.feature{
 	width: 100%;
-	height: 600px;
+	height: auto;
 }
 .feature-card{
 
