--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,7 @@ src: url("Angie-Regular.otf");
 	background: #FC583D;
   padding: 15px 25px;
 	border-radius:15px ;
+  font-size: 18px;
   border: none;
 }
 
