--- a/css/style.css
+++ b/css/style.css
@@ -360,6 +360,10 @@ h2{
     height: 600px;
 }
 
+.content-top-left{
+  margin-left: 50px;
+}
+
 .content-top-right a,.content-top-right h3 ,  .content-top-right a i{
  color: #fc583d;
  text-decoration: none;
@@ -378,6 +382,10 @@ h2{
 
 .content-bottom-left img{
     height: 600px;
+}
+
+.content-bottom-left{
+  margin-left: 50px;
 }
 
 .content-bottom-right a,.content-bottom-right h3, .content-bottom-right a i{
