--- a/css/style.css
+++ b/css/style.css
@@ -361,7 +361,7 @@ h2{
 }
 
 .content-top-left{
-  margin-left: 50px;
+  margin-right: 50px;
 }
 
 .content-top-right a,.content-top-right h3 ,  .content-top-right a i{
