--- a/css/style.css
+++ b/css/style.css
@@ -385,7 +385,7 @@ h2{
 }
 
 .content-bottom-left{
-  margin-left: 100px;
+  margin-left: 150px!important;
 }
 
 .content-bottom-right a,.content-bottom-right h3, .content-bottom-right a i{
