--- a/css/style.css
+++ b/css/style.css
@@ -392,12 +392,14 @@ h2{
 
 .content-bottom-left img{
     height: 600px;
-    /*margin-left:150px!important;*/
+    margin-left:-80px!important;
 }
 
 .content-bottom-right{
-  margin-left: 140px;
+  margin-left: 64px;
 }
+
+
 
 
 .content-bottom-right a,.content-bottom-right h3, .content-bottom-right a i{
