--- a/css/style.css
+++ b/css/style.css
@@ -549,6 +549,10 @@ h2{
   padding: 0px;
 }
 
+.footer-bottom-right ul li a{
+  font-size: 18px;
+}
+
 .playstore img{
   width: 130px;
   height: 50px;
