--- a/css/style.css
+++ b/css/style.css
@@ -198,12 +198,17 @@ p{
 	width: 100%;
 	height: 700px;
 }
+
 .feature-card{
 	/*margin: 10px;
 	padding: 100px;*/
   width: 400px!important;
   height: 370px!important;
 
+}
+
+.feature-card .box{
+  box-sizing: content-box;
 }
 
 
@@ -223,6 +228,7 @@ p{
  font-size: 28px;
  margin: 10px auto;
  text-align: center;
+
 
 }
 
