--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
-  font-family: "MYRIADPRO-REGULAR", sans-serif;
+  font-family: "Angie", sans-serif;
   
 }
 
@@ -11,11 +11,15 @@ body{
 }
 
 @font-face {
-src: url("MYRIADPRO-REGULAR.otf");
+font-family: "Angie";
 src: url("Angie Bold.ttf");
 src: url("Angie-Regular.otf");
-
+/*src: url("MYRIADPRO-REGULAR.otf");*/
 }
+
+
+
+
 
 h3{
   font-size: 22px;
