--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,11 @@ body{
 
 @font-face {
 font-family: "Angie";
+src: url("../font/AngieBold.ttf");
+}
+
+@font-face {
+font-family: "Angie";
 src: url("Angie Bold.ttf");
 src: url("Angie-Regular.otf");
 /*src: url("MYRIADPRO-REGULAR.otf");*/
@@ -63,7 +68,7 @@ p{
   color: black;
   margin: 0.6rem;
   font-size: 20px;
-   font-family: "MYRIADPRO-REGULAR", sans-serif;
+   font-family: "AngieBold", sans-serif;
 }
 
 
