--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,9 @@ body{
 
 @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
 
+@font-face{
 font-family: 'Nunito', sans-serif;
+}
 
 @font-face {
 font-family: "Angie";
@@ -21,7 +23,6 @@ src: url("../font/AngieBold.ttf");
 }
 
 @font-face {
-font-family: "Angie";
 src: url("Angie Bold.ttf");
 src: url("Angie-Regular.otf");
 /*src: url("MYRIADPRO-REGULAR.otf");*/
