--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,7 @@ p{
 	font-size: 73px;
     font-weight: 500;
     color: black;
-    font-family: "MYRIADPRO-REGULAR", sans-serif;
+    font-family: "AngieBold", sans-serif;
 }
 
 .banner-content a img{
