--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ font-family: 'Nunito', sans-serif;
 
 @font-face {
 font-family: "Angie";
-src: url("../font/AngieBold.ttf");
+src: url("../fonts/AngieBold.ttf");
 }
 
 @font-face {
