--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,24 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
 
-@font-face {
-    font-family: 'angiebold';
-    src: url('angiebold-webfont.woff2') format('woff2'),
-         url('angiebold-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
 @font-face{
 font-family: 'Nunito', sans-serif;
 }
 
 @font-face {
-font-family: "Angie";
-src: url("../fonts/AngieBold.ttf");
+    font-family: 'angiebold';
+    src: url('../fonts/angiebold-webfont.woff2') format('woff2'),
+         url('../fonts/angiebold-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
 }
+
 
 @font-face {
-src: url("Angie Bold.ttf");
-src: url("Angie-Regular.otf");
-/*src: url("MYRIADPRO-REGULAR.otf");*/
+  font-family: angie;
+  src: url('AngieBold.ttf');
 }
-
 
 * {
   margin: 0px;
