--- a/css/style.css
+++ b/css/style.css
@@ -150,7 +150,7 @@ p{
 	font-size: 73px;
     font-weight: 500;
     color: black;
-    font-family: "AngieBold", sans-serif !important;
+    font-family: "angie", sans-serif !important;
 }
 
 .banner-content a img{
