--- a/css/style.css
+++ b/css/style.css
@@ -5,14 +5,14 @@
 font-family: 'Nunito', sans-serif;
 }
 
-@font-face {
+/*@font-face {
     font-family: 'angiebold';
     src: url('../fonts/angiebold-webfont.woff2') format('woff2'),
          url('../fonts/angiebold-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
-}
+}*/
 
 
 @font-face {
