--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,21 @@
+
+
+
+
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+  font-family: 'Nunito', sans-serif;
+  
+}
+
 @font-face {
   font-family: angie;
   src: url('AngieBold.ttf');
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');*/
 
 @font-face{
 font-family: 'Nunito', sans-serif;
@@ -18,16 +30,6 @@ font-family: 'Nunito', sans-serif;
 
 }*/
 
-
-
-
-* {
-  margin: 0px;
-  padding: 0px;
-  box-sizing: border-box;
-  font-family: "Nunito", sans-serif;
-  
-}
 
 body{
   max-width: 1920px;
