--- a/css/style.css
+++ b/css/style.css
@@ -152,7 +152,7 @@ p{
 	font-size: 73px;
     font-weight: 500;
     color: black;
-    font-family: "angie", sans-serif !important;
+    font-family: 'angie'!important;
 }
 
 .banner-content a img{
