--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,11 @@
   src: url('AngieBold.ttf');
 }
 
+@font-face {
+  font-family: MyriadPro;
+  src: url('MYRIADPRO-REGULAR.otf');
+}
+
 
 /*@font-face {
     font-family: 'angiebold';
@@ -34,7 +39,8 @@ body{
 
 
 h2{
-  font-family: 'angie'!important;
+  font-family: MyriadPro;
+  /*font-family: 'angie'!important;*/
   color: black;
   font-size: 60px;
 }
