--- a/css/style.css
+++ b/css/style.css
@@ -152,9 +152,14 @@ p{
 	margin-left: 234px;
 }
 
+.banner-section-1{
+margin: 0px 0px;
+    font-size: 90px;
+}
+
 
 .banner-content h1{
-	font-size: 71px;
+	font-size: 91px;
     font-weight: 600;
     color: black;
     font-family: 'angie'!important;
