--- a/css/style.css
+++ b/css/style.css
@@ -151,15 +151,15 @@ p{
 	
 	margin-left: 234px;
 }
-
+/*
 .banner-section-1{
 margin: 0px 0px;
     font-size: 90px;
 }
-
+*/
 
 .banner-content h1{
-	font-size: 91px;
+	font-size: 71px;
     font-weight: 600;
     color: black;
     font-family: 'angie'!important;
