--- a/css/style.css
+++ b/css/style.css
@@ -151,12 +151,12 @@ p{
 	
 	margin-left: 234px;
 }
-/*
+
 .banner-section-1{
-margin: 0px 0px;
+/*margin: 0px 0px;*/
     font-size: 90px;
 }
-*/
+
 
 .banner-content h1{
 	font-size: 71px;
