--- a/css/style.css
+++ b/css/style.css
@@ -152,11 +152,6 @@ p{
 	margin-left: 234px;
 }
 
-.banner-section-1{
-/*margin: 0px 0px;*/
-    font-size: 90px;
-}
-
 
 .banner-content h1{
 	font-size: 71px;
@@ -168,6 +163,7 @@ p{
 .banner-content a img{
 	width: 180px;
     height: 60px;
+    margin: 0 10px;
 }
 
 .banner-content p{
