--- a/css/style.css
+++ b/css/style.css
@@ -155,7 +155,7 @@ p{
 
 
 .banner-content h1{
-	font-size: 92;
+	font-size: 92px;
     font-weight: 600;
     color: black;
     font-family: 'angie'!important;
