--- a/css/style.css
+++ b/css/style.css
@@ -161,7 +161,7 @@ p{
     font-weight: 600;
     color: black;
    /* font-family: 'angie'!important;*/
-   font-family: 'angie-bold', sans-serif;
+   font-family: 'angie', sans-serif;
     white-space: nowrap;
 }
 
