--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,8 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
-  /*font-family: 'Nunito', sans-serif;*/
-  font-family: 'angie-bold', sans-serif;
+  font-family: 'Nunito', sans-serif;
+  /*font-family: 'angie-bold', sans-serif;*/
 
 }
 
