--- a/css/style.css
+++ b/css/style.css
@@ -172,10 +172,7 @@ p{
 
 .banner-content h1{
   font-size: 72px;
-    font-weight: 600;
-    color: black;
-    font-family: 'angie'!important;
-    white-space: nowrap;
+    
 }
 
 }
@@ -666,7 +663,7 @@ p{
   color: #757575;
 }
 
-@media screen and (max-width: 768px) {
+@media only screen and (max-device-width: 768px) {
   .footer-top-right img{
     height: 300px;
     width: auto;
