--- a/css/style.css
+++ b/css/style.css
@@ -168,7 +168,7 @@ p{
 }
 
 
-@media only screen and (max-device-width: 1710px){
+@media only screen and (min-device-width: 1710px){
 
 .banner-content h1{
   font-size: 72px;
