--- a/css/style.css
+++ b/css/style.css
@@ -180,16 +180,28 @@ p{
     
 }
 
-.banner-section-2 img {
+/*.banner-section-2 img {
     margin-left: -278px;
     margin-top: -80px;
     position: relative;
     z-index: 0;
 }
-
+*/
 .banner-content {
     margin-left: 34px;
     margin-top: -134px;
+}
+
+.banner-content h1 {
+    font-size: 3.8rem;
+}
+
+.banner-section-2 img {
+    margin-left: -175px;
+    margin-top: -47px;
+    position: relative;
+    z-index: 0;
+    max-width: 815px;
 }
 
 }
