--- a/css/style.css
+++ b/css/style.css
@@ -173,38 +173,7 @@ p{
 }
 
 
-@media only screen and (max-width:1710px){
 
-.banner-content h1{
-  font-size: 4.5rem;
-    
-}
-
-/*.banner-section-2 img {
-    margin-left: -278px;
-    margin-top: -80px;
-    position: relative;
-    z-index: 0;
-}
-*/
-.banner-content {
-    margin-left: 34px;
-    margin-top: -134px;
-}
-
-.banner-content h1 {
-    font-size: 3.8rem;
-}
-
-.banner-section-2 img {
-    margin-left: -175px;
-    margin-top: -47px;
-    position: relative;
-    z-index: 0;
-    max-width: 815px;
-}
-
-}
 
 .banner-content a img{
 	width: 180px;
@@ -253,24 +222,44 @@ p{
 	left: 510;
 }*/
 
-@media screen and (max-width:768px) {
-  .ban-img-1{
-  position: absolute;
-  height: 300px;
-  left: 410px;
+@media only screen and (max-width:1710px){
+
+.banner-content h1{
+  font-size: 4.5rem;
+    
 }
 
-.banner-content{
-  transform: translate(-90px, 250px);
-  
+/*.banner-section-2 img {
+    margin-left: -278px;
+    margin-top: -80px;
+    position: relative;
+    z-index: 0;
+}
+*/
+.banner-content {
+    margin-left: 34px;
+    margin-top: -134px;
 }
 
-.banner-rectangle img{
-  display: none!important;
-
-}
+.banner-content h1 {
+    font-size: 3.8rem;
 }
 
+.banner-section-2 img {
+    margin-left: -175px;
+    margin-top: -16px;
+    position: relative;
+    z-index: 0;
+    max-width: 815px;
+}
+
+.banner-content p {
+    
+    font-size: 22px;
+   
+}
+
+}
 /*End Banner*/
 
 
