--- a/css/style.css
+++ b/css/style.css
@@ -13,11 +13,20 @@ font-family: "CustomFont";
 src: url("MYRIADPRO-REGULAR.otf") format("opentype");
 }*/
 
-@font-face {
+/*@font-face {
   font-family: Angie;
   src: url('AngieBold.ttf');
 }
+*/
 
+@font-face {
+    font-family: 'Angie';
+    src: url('AngieBold.woff2') format('woff2'),
+        url('AngieBold.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
 
 
 
