--- a/css/style.css
+++ b/css/style.css
@@ -4,20 +4,10 @@
   padding: 0px;
   box-sizing: border-box;
   font-family: 'Nunito', sans-serif;
-/*font-family: Angie;*/
 
 }
 
-/*@font-face {
-font-family: "CustomFont";
-src: url("MYRIADPRO-REGULAR.otf") format("opentype");
-}*/
 
-/*@font-face {
-  font-family: Angie;
-  src: url('AngieBold.ttf');
-}
-*/
 
 @font-face {
     font-family: 'Angie';
@@ -28,28 +18,6 @@ src: url("MYRIADPRO-REGULAR.otf") format("opentype");
     font-display: swap;
 }
 
-
-
-
-/*@font-face {
-  font-family: angie;
-  src: url('AngieBold.ttf');
-}
-
-@font-face {
-  font-family: myriadpro;
-  src: url('MYRIADPRO-REGULAR.otf');
-}
-*/
-
-/*@font-face {
-    font-family: 'angiebold';
-    src: url('../fonts/angiebold-webfont.woff2') format('woff2'),
-         url('../fonts/angiebold-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
-}*/
 
 
 body{
@@ -173,7 +141,7 @@ p{
 
 .banner-content{
 	
-	margin-left: 200px;
+	margin-left: 234px;
   margin-top: -100px;
 }
 
@@ -181,6 +149,7 @@ p{
 .banner-content h1{
 	font-size: 5.75rem;
     font-weight: 600;
+    word-spacing: -1rem;
     color: black;
     font-family: Angie;
     white-space: nowrap;
