--- a/css/style.css
+++ b/css/style.css
@@ -258,7 +258,7 @@ p{
 	padding: 100px;*/
   width: 400px!important;
   height: 370px!important;
-  font-family: 'Angie';
+
 
 }
 
@@ -283,6 +283,7 @@ p{
  font-size: 28px;
  margin: 10px auto;
  text-align: center;
+ font-family: Angie!important;
 
 
 }
