--- a/css/style.css
+++ b/css/style.css
@@ -227,6 +227,13 @@ p{
 	left: 510;
 }*/
 
+@media only screen and (max-width:768px){
+.banner-content {
+    
+    margin-top: 12.5rem;
+}
+
+}
 @media only screen and (max-width:1710px){
 
 .banner-content h1{
