--- a/css/style.css
+++ b/css/style.css
@@ -233,6 +233,10 @@ p{
     margin-top: 12.5rem;
 }
 
+.banner-section-2 img {
+   display: none;
+}
+
 }
 @media only screen and (max-width:1710px){
 
