--- a/css/style.css
+++ b/css/style.css
@@ -233,8 +233,8 @@ p{
     margin-top: 12.5rem;
 }
 
-.banner-section-2 img {
-   display: none;
+.banner-content-2 img {
+   display: none!important;
 }
 
 }
