--- a/css/style.css
+++ b/css/style.css
@@ -227,7 +227,7 @@ p{
 	left: 510;
 }*/
 
-@media only screen and (max-width:768px){
+@media only screen and (min-width:768px){
 .banner-content {
     
     margin-top: 12.5rem;
