--- a/css/style.css
+++ b/css/style.css
@@ -227,7 +227,7 @@ p{
 	left: 510;
 }*/
 
-@media only screen and (min-width:768px){
+/*@media only screen and (min-width:768px){
 .banner-content {
     
     margin-top: 12.5rem;
@@ -237,8 +237,8 @@ p{
    display: none!important;
 }
 
-}
-@media only screen and (min-width:1710px){
+}*/
+@media only screen and (max-width:1710px){
 
 .banner-content h1{
   font-size: 4.5rem;
