--- a/css/style.css
+++ b/css/style.css
@@ -238,7 +238,7 @@ p{
 }
 
 }*/
-@media only screen (max-width:400px) and (min-width:900px){
+@media only screen and (max-width:1710px){
 
 .banner-content h1{
   font-size: 4.5rem;
