--- a/css/style.css
+++ b/css/style.css
@@ -208,7 +208,7 @@ p{
 
 
 
-@media only screen and (min-width:768px){
+@media only screen and (max-width:768px){
 .banner-content {
     
     margin-top: 12.5rem;
@@ -220,7 +220,7 @@ p{
 
 }
 
-@media only screen (min-width:1400px) and (max-width:1800px){
+@media only screen and (max-width:1800px){
 
 .banner-content h1{
   font-size: 4.5rem;
