--- a/css/style.css
+++ b/css/style.css
@@ -560,6 +560,13 @@ p{
 
 }
 
+@media only screen and (min-width:768px){
+.testimonial-container {
+     width: auto; 
+    margin: 0 auto;
+}
+}
+
 /*End Testimonial*/
 
 
