--- a/css/style.css
+++ b/css/style.css
@@ -690,11 +690,11 @@ p{
 
 }
 
-@media only screen and (max-width: 768px)
+@media only screen and (max-width: 768px){
 .footer-top-left {
     margin-left: 0px;
     white-space: normal;
 }
-
+}
 /*Footer End*/
 
