--- a/css/style.css
+++ b/css/style.css
@@ -560,7 +560,7 @@ p{
 
 }
 
-@media only screen and (min-width:768px){
+@media only screen and (max-width:768px){
 .testimonial-container {
      width: auto; 
     margin: 0 auto;
