--- a/css/style.css
+++ b/css/style.css
@@ -446,7 +446,7 @@ p{
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-top:100px;
+  padding: 70px 0 30px 0;
 }
 
 .content-top-right p{
