--- a/css/style.css
+++ b/css/style.css
@@ -611,6 +611,7 @@ p{
 
 .footer-top-left{
   margin-left: 222px;
+  margin-top: -72px;
 }
 
 .footer-top-left h2{
@@ -622,7 +623,7 @@ p{
 
  .footer-top-left p{
   color: #000;
-  margin: 40px 0;
+  margin: 20px 0 60px 0;
 }
 
 .footer-top-right img{
