--- a/css/style.css
+++ b/css/style.css
@@ -484,6 +484,7 @@ p{
 .content-bottom-left img{
     height: 600px;
     margin-left:-80px!important;
+    margin-top: -50px;
 }
 
 .content-bottom-right{
