--- a/css/style.css
+++ b/css/style.css
@@ -551,7 +551,6 @@ p{
   background: white;
 }
 
-
 .testi-card-slider .slick-next {
     right: 680px !important;
     top: 368px!important;
@@ -559,7 +558,6 @@ p{
     border-radius: 50%!important;
     background: transparent!important;
     display: none!important;
-
 }
 
 .testi-card-slider .slick-prev {
@@ -598,7 +596,6 @@ p{
   display: flex;
   justify-content: space-around;;
   align-items: center;
-  
 }
 
 .footer-bottom-right .list-item a {
@@ -638,13 +635,9 @@ p{
 .footer-bottom{
   display: flex;
   justify-content: space-evenly;
-  align-items: flex-end;
+  align-items: flex-start;
   margin-top: -40px;
-
-  
 }
-
-
 
 .footer-bottom-right ul {
   display: flex;
@@ -659,13 +652,12 @@ p{
   width: 168px;
   height: 55px;
   margin: 0 8px;
-
-
 }
 
 .footer-bottom-center img{
   width: 305px;
   height: 108px;
+  margin-top: -25px;
 }
 
 .footer-btn{
