--- a/css/style.css
+++ b/css/style.css
@@ -596,7 +596,7 @@ p{
 .footer-top{
   display: flex;
   justify-content: space-evenly;
-  align-items: flex-end;
+  align-items: flex-start;
 }
 
 .footer-bottom-right .list-item a {
@@ -636,7 +636,7 @@ p{
 .footer-bottom{
   display: flex;
   justify-content: space-evenly;
-  align-items: flex-end;
+  align-items: center;
  /* margin-top: -40px;*/
 }
 
