--- a/css/style.css
+++ b/css/style.css
@@ -596,7 +596,7 @@ p{
 .footer-top{
   display: flex;
   justify-content: space-evenly;
-  align-items: flex-start;
+  align-items: center;
 }
 
 .footer-bottom-right .list-item a {
@@ -636,8 +636,8 @@ p{
 .footer-bottom{
   display: flex;
   justify-content: space-evenly;
-  align-items: center;
- /* margin-top: -40px;*/
+  align-items: start;
+  margin-top: -40px;
 }
 
 .footer-bottom-right ul {
