--- a/css/style.css
+++ b/css/style.css
@@ -75,10 +75,15 @@ p{
 }
 
 #navbar ul {
-  display: flex;
+  /*display: flex;
   padding: 0px;
-  display: flex;
-    align-items: center;
+  align-items: center;*/
+
+    list-style: none;
+    display: flex;
+    /*padding: 0;
+    margin: 0;*/
+   
 }
 
 
