--- a/css/style.css
+++ b/css/style.css
@@ -140,7 +140,7 @@ p{
 
 header {
     height: 100%;
-    width: 100%;
+    width: 100px;
     float: left;
     background: #4CAF50;
     padding: 0 20px;
@@ -207,7 +207,7 @@ header {
     display: block;
 }
 .navigation {
-    position: fixed;
+   
     width: 100%;
     height: 100vh;
     background: #49d24f;
