--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ p{
 }
 
 
-/*#navbar {
+#navbar {
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -133,7 +133,7 @@ p{
 }
 
 
-*/
+
 
 
   
