--- a/css/style.css
+++ b/css/style.css
@@ -250,6 +250,15 @@ p{
    display: none!important;
 }
 
+.banner-content h1 {
+    font-size: 2.5rem;
+    font-weight: 600;
+    word-spacing: 0rem;
+    color: black;
+    font-family: Angie;
+    white-space: normal;
+}
+
 }
 
 
@@ -496,6 +505,38 @@ p{
 .content-bottom-right a,.content-bottom-right a i{
  color: #fc583d;
  text-decoration: none;
+}
+
+@media only screen and (max-width: 768px) {
+
+
+.content-top {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 70px 0 30px 0;
+}
+
+.content-top-left img{
+    height: 300px;
+    width: auto;
+}
+
+.content-bottom-left {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 70px 0 30px 0;
+}
+
+.content-top-right img{
+    height: 300px;
+    width: auto;
+}
+
+    
 }
 
 
