--- a/css/style.css
+++ b/css/style.css
@@ -531,7 +531,7 @@ p{
     width: auto;
 }
 
-.content-bottom-left {
+.content-bottom {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -539,7 +539,7 @@ p{
     padding: 70px 0 30px 0;
 }
 
-.content-top-right img{
+.content-bottom-right img{
     height: 300px;
     width: auto;
 }
