--- a/css/style.css
+++ b/css/style.css
@@ -530,6 +530,9 @@ p{
     height: 300px;
     width: auto;
 }
+.content-top-left h2{
+  font-size: 2.5rem;
+}
 
 .content-bottom {
     display: flex;
@@ -542,6 +545,10 @@ p{
 .content-bottom-right img{
     height: 300px;
     width: auto;
+}
+
+.content-bottom-right h2{
+  font-size: 2.5rem;
 }
 
     
