--- a/css/style.css
+++ b/css/style.css
@@ -553,11 +553,11 @@ p{
      margin-left: 0px; 
 }
 
-.content-bottom-right img{
+.content-bottom-left img {
     height: 300px;
-    width: auto;
+     margin-left: 0px!important; 
+     margin-top: 10px; 
 }
-
 .content-bottom-right h2{
   font-size: 2.5rem;
   text-align: center;
