--- a/css/style.css
+++ b/css/style.css
@@ -536,10 +536,15 @@ p{
     height: 300px;
     width: auto;
 }
+.content-top-left {
+     margin-right: 0px; 
+}
+
 .content-top-right h2{
   font-size: 2.5rem;
   text-align: center;
 }
+
 
 .content-bottom {
     display: flex;
