--- a/css/style.css
+++ b/css/style.css
@@ -774,13 +774,26 @@ p{
     width: auto;
 }
 
+.footer-top {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 100px;
+    box-sizing: content-box;
 }
+  .footer-top-left h2{
+    font-size: 2.5rem;
+  }
+}
+
 
 @media only screen and (max-width: 768px){
 .footer-top-left {
     margin-left: 0px;
     white-space: normal;
 }
+
 }
 /*Footer End*/
 
