--- a/css/style.css
+++ b/css/style.css
@@ -781,6 +781,7 @@ p{
     flex-direction: column;
     margin-top: 100px;
     box-sizing: content-box;
+    text-align: center;
 }
   .footer-top-left h2{
     font-size: 2.5rem;
