--- a/css/style.css
+++ b/css/style.css
@@ -772,9 +772,10 @@ p{
   
 
 
-    .footer-top-right img{
-    height: 300px;
+.footer-top-right img {
+    height: 230px;
     width: auto;
+    margin-top: 50px;
 }
 
 .footer-top {
@@ -793,6 +794,18 @@ p{
   .footer-top-left {
     margin-left: 0px;
     white-space: normal;
+}
+
+
+.footer-bottom {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 100px;
+    box-sizing: content-box;
+    text-align: center;
+    margin: 0 auto;
 }
 
 }
