--- a/css/style.css
+++ b/css/style.css
@@ -808,6 +808,24 @@ p{
     margin: 0 auto;
 }
 
+.copyright {
+    font-size: 16px;
+    line-height: 20px;
+    color: #757575;
+    font-weight: 500;
+    /* height: 155px; */
+    text-align: center;
+    display: flex;
+    background: black;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.copyright span{
+  display: none;
+}
+
 }
 
 
