--- a/css/style.css
+++ b/css/style.css
@@ -644,6 +644,10 @@ p{
 
 @media only screen and (max-width:768px){
 
+  #testimonial{
+    margin: 50px 0;
+  }
+
 .testimonial-container {
      width: auto; 
     margin: 0 auto;
