--- a/css/style.css
+++ b/css/style.css
@@ -788,7 +788,15 @@ p{
 }
 
 @media only screen and (max-width: 768px) {
-  
+
+  .footer {
+ 
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 1000px;
+    width: 100%;
+    overflow-x: hidden;
+}
 
 
 .footer-top-right img {
