--- a/css/style.css
+++ b/css/style.css
@@ -422,7 +422,7 @@ p{
 }
 
 .testimonial-feature{
-  display: none;
+  display: none!important;
 }
 
 
@@ -449,6 +449,11 @@ p{
     font-size: 2.5rem;
     text-align: center;
   }
+
+  .testimonial-feature{
+  display: block;!important;
+}
+
 
 
 }
