--- a/css/style.css
+++ b/css/style.css
@@ -494,11 +494,15 @@ p{
   .feature-top-right{
     margin-top: 80px;
     margin-left: 0;
+    text-align: center;
+
   }
 
   .feature-top-right h2{
     font-size: 2.5rem;
     text-align: center;
+    text-align: center;
+    
   }
 
   #testimonial-feature{
