--- a/css/style.css
+++ b/css/style.css
@@ -140,10 +140,13 @@ p{
 
 @media only screen and (max-width: 768px){
    
-
+#toggle-btn i{
+      left: 332px;
+    top: -50px;
+}
   
 
-  .container{
+  #container{
     display: none;
   }
 
