--- a/css/style.css
+++ b/css/style.css
@@ -144,8 +144,8 @@ p{
     display: block;
   }
    
-#toggle-btn i{
-      left: 332px;
+.show-menu-btn i{
+    left: 332px;
     top: -50px;
 }
   
@@ -164,7 +164,7 @@ p{
     position: fixed;
     width: 100%;
     height: 100vh;
-    background: #49d24f;
+    background: #fff;
     top: -100%;
     left: 0;
     padding: 50px 0px;
