--- a/css/style.css
+++ b/css/style.css
@@ -163,10 +163,10 @@ p{
     display: block;
 }
 .navigation {
-    position: fixed;
+   /* position: fixed;*/
     width: 100%;
     height: 100vh;
-    background: #000;
+    background: #fff;
     top: -100%;
     left: 0;
     padding: 50px 0px;
