--- a/css/style.css
+++ b/css/style.css
@@ -163,7 +163,7 @@ p{
     display: block;
 }
 .navigation {
-   /* position: fixed;*/
+    position: fixed;
     width: 100%;
     height: 100vh;
     background: #fff;
