--- a/css/style.css
+++ b/css/style.css
@@ -179,7 +179,7 @@ p{
     padding: 15px 15px;
     text-align: center;
     text-decoration: none;
-    color: #fff;
+    color: #000;
 }
 .navigation li a i {
     width: auto;
