--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,8 @@ p{
 }
 .navigation li {
     width: 100%;
+    margin: 30px 0;
+    text-align: center;
 }
 .navigation li a {
     padding: 15px 15px;
