--- a/css/style.css
+++ b/css/style.css
@@ -515,6 +515,12 @@ p{
     padding: 50px;
   }
 
+  #testimonial-feature .testi-card-slider .testimonial-card img {
+    width: 64px;
+    height: 64px;
+    margin: 0 auto;
+}
+
 
  #feature{
   display: none;
