--- a/css/style.css
+++ b/css/style.css
@@ -521,6 +521,10 @@ p{
     margin: 0 auto;
 }
 
+#testimonial-feature .testi-card-slider .testimonial-card h5{
+  font-size: 14px;
+}
+
 
  #feature{
   display: none;
